--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="project2">
         <img src="./photos/question.png" alt="">
         <h1>question</h1>
-        <a href="">click here to play</a>
+        <a href="https://aaron-question.vercel.app/">click here to play</a>
     </div>
     <div class="project3">
         <img src="./photos/hangman.png" alt="">
